# SWE-Gym-modal

./: pyproject.toml  run_evaluation.py  test_modal_evaluation.py
swebench/harness/: constants.py  docker_build.py  grading.py  run_evaluation.py  test_spec.py
swebench/harness/modal_eval/: run_evaluation_modal.py
