[project]
name = "swe-gym-modal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "datasets>=4.0.0",
    "docker>=7.1.0",
    "ghapi>=1.0.6",
    "modal>=1.1.4",
    "python-dotenv>=1.1.1",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
    "unidiff>=0.7.5",
]
